force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c.object-meta.xml
<CustomObject>
    <label>TimeTrade Routing Questionnaire</label>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeTrade Routing Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>