force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/fields/TimeTrade_SF1__Completed_Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Completed_Visit_Count__c</fullName>
    <inlineHelpText>The number of times the questionnaire has been visited and the user completed entry and pressed the Next button.</inlineHelpText>
    <label>Completed Visit Count</label>
    <summaryForeignKey>TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c.TimeTrade_SF1__Schedule_Workflow__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>