force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/fields/TimeTrade_SF1__Default_Invitation__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Default_Invitation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Invitation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Public Invitations may be chosen for Default Invitation.</errorMessage>
        <filterItems>
            <field>TimeTrade_SF1__Invitation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Public Meeting</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TimeTrade_SF1__Invitation__c</referenceTo>
    <relationshipLabel>TimeTrade Routing Questionnaires</relationshipLabel>
    <relationshipName>TimeTrade_Routing_Questionnaires</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>