force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/fields/TimeTrade_SF1__Description__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Description__c</fullName>
    <inlineHelpText>This text appears on the questionnaire page below the title.  Use the Name field for the page title.</inlineHelpText>
    <label>Header Text</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>