force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/fields/TimeTrade_SF1__Questionnaire_ID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Questionnaire_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire ID</label>
    <type>Text</type>
</CustomField>