force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/fields/TimeTrade_SF1__Route_Count__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Route_Count__c</fullName>
    <label>Route Count</label>
    <summaryForeignKey>TimeTrade_SF1__TimeTrade_Workflow_Route__c.TimeTrade_SF1__TimeTrade_Schedule_Workflow__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>