force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/fields/TimeTrade_SF1__Scheduling_Link__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Scheduling_Link__c</fullName>
    <formula>IF( TimeTrade_SF1__Question_Count__c &gt; 0  &amp;&amp;  TimeTrade_SF1__Route_Count__c &gt; 0,HYPERLINK($Setup.TimeTrade_SF1__TTLinkalatorSettings__c.TimeTrade_SF1__CTS_Site_URL__c + &#39;/&#39; + $Setup.TimeTrade_SF1__TTLinkalatorSettings__c.TimeTrade_SF1__Namespace_Prefix__c + &#39;RoutingQuestionnaire?id=&#39; +  TimeTrade_SF1__Scheduling_Link_Id__c , $Setup.TimeTrade_SF1__TTLinkalatorSettings__c.TimeTrade_SF1__CTS_Site_URL__c + &#39;/&#39; + $Setup.TimeTrade_SF1__TTLinkalatorSettings__c.TimeTrade_SF1__Namespace_Prefix__c + &#39;RoutingQuestionnaire?id=&#39; +  TimeTrade_SF1__Scheduling_Link_Id__c ),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the link you may give to your clients so that they may fill in their answers and be routed to the best invitation.  No link is available until you define at least one question and one route.</inlineHelpText>
    <label>Scheduling Link</label>
    <type>Text</type>
</CustomField>