force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/fields/TimeTrade_SF1__Scheduling_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Scheduling_Link_Id__c</fullName>
    <formula>BLANKVALUE ( TimeTrade_SF1__TimeTrade_Schedule_Workflow_Id_MAC__c , Id )</formula>
    <label>Scheduling Link Id</label>
    <type>Text</type>
</CustomField>