force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Schedule_Workflow__c/fields/TimeTrade_SF1__TimeTrade_Schedule_Workflow_Id_MAC__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Schedule_Workflow_Id_MAC__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TimeTrade_Schedule_Workflow_Id_MAC</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>